--- a/Canvas/README
+++ b/Canvas/README
@@ -1,1 +1,1 @@
-
+Canvas circle program. Resize the window to expand the space in which circles are enclosed. Circles change size when in close proximity to the cursor.
